syntax = "proto3";

option go_package = "internal/proto";

service ActionExecutorService {
  rpc Execute(ExecuteActionRequest) returns (ExecuteActionResponse);
}

message ExecuteActionRequest {
  string action_name = 1;
  bytes payload = 2;
}

message ExecuteActionResponse {
  bytes result = 1;
}